--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "budget-system-shared",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc"
   },
   "repository": {
     "type": "git",
@@ -19,9 +20,10 @@
   },
   "homepage": "https://github.com/edwincosta/budget-system-shared#readme",
   "description": "",
-  "dependencies": {
+  "devDependencies": {
     "@types/mongoose": "^5.11.96",
     "mongoose": "^8.13.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "rimraf": "^5.0.0"
   }
 }
